# Eastern-AI-Consultant

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
apps/api/app/: main.py
apps/api/app/agents/: __init__.py  base.py
apps/api/app/api/v1/endpoints/: agriculture.py  auth.py  automation.py  business.py  chat.py  community.py  courses.py  payments.py  tools.py
apps/api/app/core/: deps.py
apps/api/app/langgraph/: chat_router.py
apps/api/app/models/: ai.py  business.py  community.py  enums.py  learning.py  notification.py  payment.py  user.py
apps/api/app/schemas/: __init__.py  chat.py  user.py
apps/api/app/services/: documents.py  storage.py
apps/api/app/workers/: celery_app.py  tasks.py
apps/api/scripts/: seed.py
apps/web/: Dockerfile  tailwind.config.ts
apps/web/public/: manifest.webmanifest
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/(app)/academy/: page.tsx
apps/web/src/app/auth/: layout.tsx
apps/web/src/components/: providers.tsx
apps/web/src/components/chat/: chat-window.tsx  markdown.tsx
apps/web/src/components/dashboard/: sidebar.tsx
apps/web/src/components/landing/: agents-showcase.tsx  cta.tsx  faq.tsx  features.tsx  hero.tsx  testimonials.tsx
apps/web/src/components/ui/: accordion.tsx  avatar.tsx  badge.tsx  card.tsx  dropdown-menu.tsx  input.tsx  textarea.tsx
apps/web/src/lib/: api.ts
apps/web/src/store/: auth.ts  language.ts
apps/web/src/types/: index.ts
backend/: .dockerignore  .env.example  .vercelignore  README.md  langgraph.json  pyproject.toml  vercel.json
backend/.langgraph_api/: .langgraph_ops.pckl
backend/alembic/: env.py
backend/app/: __init__.py  middleware.py
backend/app/agents/: personas.py  registry.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  auth.py  career.py  chat.py  courses.py  health.py  notifications.py  users.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/langgraph/: __init__.py  business_analysis.py  chat_router.py
backend/app/models/: __init__.py  business.py  chat.py  user.py
backend/app/schemas/: auth.py  business.py  chat.py  common.py  community.py  learning.py
backend/app/services/: llm.py  rag.py
backend/scripts/: seed.py  test_chat_live.py
backend/tests/: conftest.py  test_chat.py
docs/: SOFTWARE-SPECIFICATIONS.md  SRS.md  SSD.md  google-auth.md  render-vercel.md  vercel.md
frontend/: .dockerignore  .env.example  next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/app/(app)/: layout.tsx  loading.tsx
frontend/src/app/(app)/admin/: page.tsx
frontend/src/app/(app)/agriculture/: page.tsx
frontend/src/app/(app)/automation/: page.tsx
frontend/src/app/(app)/business/: page.tsx
frontend/src/app/(app)/career/: page.tsx
frontend/src/app/(app)/chat/: page.tsx
frontend/src/app/(app)/dashboard/: page.tsx
frontend/src/app/(app)/settings/: page.tsx
frontend/src/app/auth/: auth-shell.tsx  layout.tsx
frontend/src/app/auth/forgot-password/: page.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/app/auth/signup/: page.tsx
frontend/src/components/: language-switcher.tsx  logo.tsx  providers.tsx  theme-toggle.tsx
frontend/src/components/admin/: charts.tsx
frontend/src/components/auth/: auth-form-card.tsx  auth-mobile-banner.tsx  auth-visual-panel.tsx  google-auth-provider.tsx  google-sign-in-button.tsx
frontend/src/components/chat/: agent-picker.tsx  chat-window.tsx  markdown-syntax-block.tsx  markdown.tsx  message.tsx
frontend/src/components/dashboard/: auth-guard.tsx  header.tsx  nav-content.tsx  sidebar.tsx
frontend/src/components/landing/: agents-showcase.tsx  dynamic.tsx  footer.tsx  hero.tsx  navbar.tsx  pricing.tsx  stats.tsx
frontend/src/components/ui/: button.tsx  progress.tsx  sheet.tsx  tabs.tsx
frontend/src/hooks/: use-translation.ts
frontend/src/lib/: api.ts  marketing-images.ts  utils.ts
frontend/src/lib/i18n/: translations.ts
infra/nginx/: nginx.conf
(+10 files in other folders)
