[project]
name = "eastern-ai-api"
version = "1.0.0"
description = "Eastern AI Consultant — FastAPI backend with LangChain/LangGraph multi-agent AI"
requires-python = ">=3.12,<3.14"
authors = [{ name = "Eastern AI Consultant" }]
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    # --- Web framework ---
    # The `[standard]` extra pulls in `fastapi-cli` so the `fastapi dev` /
    # `fastapi run` commands work, plus `uvicorn[standard]`, `python-multipart`,
    # `email-validator`, and `httpx`.
    "fastapi[standard]==0.115.5",
    # FastAPI 0.115.x requires starlette<0.42. Do not allow 1.x — APIRouter passes
    # on_startup/on_shutdown which Starlette 1 removed from Router (TypeError at import).
    "starlette>=0.40.0,<0.42.0",
    "slowapi==0.1.9",

    # --- Validation / settings ---
    "pydantic==2.10.2",
    "pydantic-settings==2.6.1",
    "email-validator==2.2.0",

    # --- Database ---
    # NOTE: SQLAlchemy is held at 2.0.35 because langchain-community 0.3.8
    # caps it at <2.0.36 (the 2.0.36 release came out a day after that
    # langchain-community release).  Bump both together when upgrading.
    "sqlalchemy==2.0.35",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "psycopg2-binary==2.9.10",
    "pgvector==0.3.6",

    # --- Auth / Security ---
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.2.1",
    "python-jose[cryptography]==3.3.0",
    "PyJWT==2.10.0",
    "authlib==1.3.2",
    "itsdangerous==2.2.0",

    # --- AI / LLM stack ---
    "langchain==0.3.9",
    "langchain-core==0.3.21",
    "langchain-community==0.3.8",
    "langchain-groq==0.2.1",
    "langchain-openai==0.2.10",
    "langgraph==0.2.53",
    "langgraph-checkpoint==2.0.6",
    "groq==0.13.0",
    "openai==1.55.3",
    "tiktoken==0.8.0",

    # --- RAG / Vector ---
    # ChromaDB ships its own ONNX-based default embedder; sentence-transformers
    # (and the ~2 GB torch dependency) is *optional* — see [local-embed] extra.
    "chromadb==0.5.20",

    # --- Document parsing ---
    "pypdf==5.1.0",
    "python-docx==1.1.2",
    "unstructured==0.16.10",
    "beautifulsoup4==4.12.3",

    # --- Async / queues ---
    "celery[redis]==5.4.0",
    "redis==5.2.0",
    "httpx==0.28.0",

    # --- Storage ---
    "boto3==1.35.71",
    "cloudinary==1.41.0",

    # --- Reporting ---
    "reportlab==4.2.5",

    # --- Observability ---
    "structlog==24.4.0",
    "python-json-logger==2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "ruff==0.8.1",
    "mypy==1.13.0",
]

# Optional: local embeddings via sentence-transformers (pulls ~2 GB of torch).
# Only install when you cannot/will-not use OpenAI embeddings.
#   uv sync --extra local-embed
local-embed = [
    "sentence-transformers==3.3.1",
]

[project.urls]
Homepage = "https://easternaiconsultant.com"
Repository = "https://github.com/eastern-ai/eastern-ai-consultant"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Vercel: when the project Root Directory is `backend/`, this exposes the ASGI app.
[tool.vercel]
entrypoint = "app.main:app"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
