[project]
name = "eastern-ai-api"
version = "1.0.0"
description = "Eastern AI Consultant — FastAPI backend with LangChain/LangGraph multi-agent AI"
requires-python = ">=3.12"
authors = [{ name = "Eastern AI Consultant" }]
readme = "README.md"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
